--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: <p align="center"> Sai Krishna </p>
-logo: /assets/img/logo.png
+logo: /assets/img/IMG_20150725_204912~2.jpg
 
 description:
   <p align="center">
